--- a/Web/Practice/Animated Login Form/index.html
+++ b/Web/Practice/Animated Login Form/index.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-  <img class="wave" src="../images/wave.png">
+  <img class="wave" src="./imges/wave.png">
   <div class="container">
     <div class="img">
-      <img src="../images/bg.svg">
+      <img src="./imges/bg.svg">
     </div>
     <div class="login-content">
       <form action="index.html">
-        <img src="../images/undraw_profile_pic_ic-5-t.svg">
+        <img src="./imges/undraw_profile_pic_ic-5-t.svg">
         <h2 class="title">Welcome</h2>
         <div class="input-div one">
           <div class="i">
