--- a/Web/sources/12/flex-2.html
+++ b/Web/sources/12/flex-2.html
@@ -8,7 +8,7 @@
     .container {
       display:flex;  /* 플렉스 컨테이너 지정 */
       background-color:#eee;
-      border:1px solid #222;
+      border:1px solid rgb(246, 4, 4);
       margin-bottom:30px;
     }
     .box {
