--- a/Web/sources/13/script-2.html
+++ b/Web/sources/13/script-2.html
@@ -6,7 +6,8 @@
 	<title>글자색 바꾸기</title>
 	<style>
 		body { text-align:center; }
-		#heading { color:blue; }
+		#heading { color:blue;
+		cursor: pointer; }
 		#text { 
 			color:gray;
 			font-size:15px;
