--- a/Web/sources/14/seat-1.html
+++ b/Web/sources/14/seat-1.html
@@ -16,7 +16,7 @@
     else
       rowNum = parseInt(memNum / colNum) + 1;
 
-    document.write("모두 " + rowNum + "개의 줄이 필요합니다.");
+    document.write(`모두 ${rowNum}개의 줄이 필요합니다.`);
   </script>
 </body>
 </html>
