--- a/Web/sources/16/day.html
+++ b/Web/sources/16/day.html
@@ -15,7 +15,7 @@
       text-align: center;
     }
     h1 {
-      margin-top:80px;
+      margin-top:50px;
     }
     .accent {
       font-size:1.8em;
@@ -27,9 +27,22 @@
 <body>
   <div id="container">
     <h1>책 읽기</h1>
-    <p><span class="accent" id="result"></span>일 연속으로 <br> 책 읽기를 달성했군요.</p>
+    <p><span class="accent" id="result"> </span>일 연속으로 <br> 책 읽기를 달성했군요.</p>
     <p>축하합니다!</p>
-  </div>  
+  </div>
+  
+  <script>
+    let now = new Date();
+    let firstDay = new Date('2021-10-01');
+    
+    let toNow = now.getTime();
+    let toFirst = firstDay.getTime()
 
+    let passedTime = toNow - toFirst;
+    passedTime = Math.round(passedTime/(1000*60*60*24))
+  
+    document.querySelector('#result').innerText = passedTime;
+
+  </script>
 </body>
 </html>
