--- a/Web/JavaScript/Add & delete/index.html
+++ b/Web/JavaScript/Add & delete/index.html
@@ -11,6 +11,12 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+  <button id="addbtn">Add</button>
+  <button id="deletebtn" >Delete</button>
+  <hr>
+  <div class="contain">
+  </div>
 
+  <hr>
 </body>
 </html>
