--- a/Web/JavaScript/Logical Operator(논리연산자-01)/index.html
+++ b/Web/JavaScript/Logical Operator(논리연산자-01)/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Button Ripple Effect</title>
-  <link rel="stylesheet" href="style.css">
+  <title>논리연산자</title>
   <link rel="shortcut icon" href="#" type="image/x-icon">
-  <script src="script.js" defer></script>
+  <script defer src="script.js"></script>
 </head>
 <body>
-  <a href="#">Button</a>
-  <a href="#">Button</a>
-  <a href="#">Button</a>
+  <P></P>
+
 </body>
 </html>
