--- a/Web/sources/10/ps-4.html
+++ b/Web/sources/10/ps-4.html
@@ -13,12 +13,14 @@
     }
     li.new::after {
       content:"NEW!!";
+      display: inline-block;
       font-size:x-small;
       padding:2px 4px;
       margin: 0 10px;
       border-radius:2px;
       background:#f00;
       color:#fff;
+      transform: rotate(25deg);
     }
   </style>
 </head>
