--- a/Web/CSS/가상선택자(before,after)-01/가상선택자(before,after)-01/index.html
+++ b/Web/CSS/가상선택자(before,after)-01/가상선택자(before,after)-01/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<html lang="ko">
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Button Ripple Effect</title>
+  <title>Document</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="#" type="image/x-icon">
-  <script src="script.js" defer></script>
 </head>
 <body>
-  <a href="#">Button</a>
-  <a href="#">Button</a>
-  <a href="#">Button</a>
+  <div>맛있는 갈비</div>
+  <p> 연락주세요!</p>
 </body>
 </html>
