--- a/Web/JavaScript/BgColor Change-02/index.html
+++ b/Web/JavaScript/BgColor Change-02/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Javascipt</title>
+  <title>bgColor Change - Array</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="#" type="image/x-icon">
-  <script src="index.js" defer></script>
+  <script src="script.js" defer></script>
   <style>
     .box{
       margin-top: 20px;
