--- a/Web/JavaScript/Color Change(RGB)/index.html
+++ b/Web/JavaScript/Color Change(RGB)/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="ko">
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>bgColor Change - RGB</title>
+  <title>Document</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="#" type="image/x-icon">
-  <script src="script.js" defer></script>
+  <script src="script.js" defer></script>  
 </head>
-
 <body>
   <button id="btn">Click Me</button>
+  <div class="box"></div>
 </body>
 </html>
