--- a/Web/JavaScript/event위임-03/index.html
+++ b/Web/JavaScript/event위임-03/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="ko">
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>bgColor Change - RGB</title>
+  <title>Event 위임</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="#" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <script src="script.js" defer></script>
 </head>
-
 <body>
-  <button id="btn">Click Me</button>
+  <input type="button" value="1" data="counter">
+  <input type="button" value="2" data="counter">
+  <input type="button" value="3" data="counter">
 </body>
 </html>
