--- a/Web/CSS/Side Bar Menu-01/index.html
+++ b/Web/CSS/Side Bar Menu-01/index.html
@@ -1,53 +1,49 @@
 <!DOCTYPE html>
-<html lang="ko">
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+  <title>Side Bar Menu</title>
+  <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="#" type="image/x-icon">
-  <script src="script.js" defer></script>
 </head>
 <body>
-  <nav>
-    <div class="sidebar-top">
+  <div class="nav">
+    <div class="nav-top">
       <span class="shrink-btn">
         <i class='bx bx-chevron-left'></i>
       </span>
-      <img src="./img/logo.png" class="logo" alt="">
-      <h3 class="hide">MMC</h3>
+      <img src="./heart flower.png" class="logo" alt="">
+      <h3 class="hide">Adidas</h3>
+    </div>
+    <div class="nav-search">
+      <i class='bx bx-search' ></i>
+      <input type="text" class="hide" placeholder="quick Search...">
     </div>
 
-    <div class="search">
-      <i class='bx bx-search'></i>
-      <input type="text" class="hide" placeholder="Quick Search ...">
-    </div>
-
-    <div class="sidebar-links">
+    <div class="nav-links">
       <ul>
         <div class="active-tab"></div>
-        <li class="tooltip-element" data-tooltip="0">
+        <li class="tooltip-element" data-tooltip = "0">
           <a href="#" class="active" data-active="0">
             <div class="icon">
-              <i class='bx bx-tachometer'></i>
-              <i class='bx bxs-tachometer'></i>
+              <i class='bx bx-tachometer' ></i>
+              <i class='bx bxs-tachometer' ></i>
             </div>
             <span class="link hide">Dashboard</span>
           </a>
         </li>
-        <li class="tooltip-element" data-tooltip="1">
+        <li class="tooltip-element" data-tooltip = "1">
           <a href="#" data-active="1">
             <div class="icon">
-              <i class='bx bx-folder'></i>
-              <i class='bx bxs-folder'></i>
+              <i class='bx bx-folder' ></i>
+              <i class='bx bxs-folder' ></i>
             </div>
-            <span class="link hide">Projects</span>
+            <span class="link hide">Project</span>
           </a>
         </li>
-        <li class="tooltip-element" data-tooltip="2">
+        <li class="tooltip-element" data-tooltip = "2">
           <a href="#" data-active="2">
             <div class="icon">
               <i class='bx bx-message-square-detail'></i>
@@ -56,11 +52,11 @@
             <span class="link hide">Messages</span>
           </a>
         </li>
-        <li class="tooltip-element" data-tooltip="3">
+        <li class="tooltip-element" data-tooltip = "3">
           <a href="#" data-active="3">
             <div class="icon">
-              <i class='bx bx-bar-chart-square'></i>
-              <i class='bx bxs-bar-chart-square'></i>
+              <i class='bx bx-bar-chart-square' ></i>
+              <i class='bx bxs-bar-chart-square' ></i>
             </div>
             <span class="link hide">Analytics</span>
           </a>
@@ -76,29 +72,29 @@
       <h4 class="hide">Shortcuts</h4>
 
       <ul>
-        <li class="tooltip-element" data-tooltip="0">
+        <li class="tooltip-element" data-tooltip = "0">
           <a href="#" data-active="4">
             <div class="icon">
-              <i class='bx bx-notepad'></i>
-              <i class='bx bxs-notepad'></i>
+              <i class='bx bx-notepad' ></i>
+              <i class='bx bxs-notepad' ></i>
             </div>
             <span class="link hide">Tasks</span>
           </a>
         </li>
-        <li class="tooltip-element" data-tooltip="1">
+        <li class="tooltip-element" data-tooltip = "1">
           <a href="#" data-active="5">
             <div class="icon">
-              <i class='bx bx-help-circle'></i>
-              <i class='bx bxs-help-circle'></i>
+              <i class='bx bx-help-circle' ></i>
+              <i class='bx bxs-help-circle' ></i>
             </div>
             <span class="link hide">Help</span>
           </a>
         </li>
-        <li class="tooltip-element" data-tooltip="2">
+        <li class="tooltip-element" data-tooltip = "2">
           <a href="#" data-active="6">
             <div class="icon">
-              <i class='bx bx-cog'></i>
-              <i class='bx bxs-cog'></i>
+              <i class='bx bx-cog' ></i>
+              <i class='bx bxs-cog' ></i>
             </div>
             <span class="link hide">Settings</span>
           </a>
@@ -106,46 +102,32 @@
         <div class="tooltip">
           <span class="show">Tasks</span>
           <span>Help</span>
-          <span>Settings</span>
+          <span>Settins</span>
         </div>
       </ul>
     </div>
 
-    <div class="sidebar-footer">
+    <div class="nav-footer">
       <a href="#" class="account tooltip-element" data-tooltip="0">
-        <i class='bx bx-user'></i>
+        <i class='bx bx-user' ></i>
       </a>
       <div class="admin-user tooltip-element" data-tooltip="1">
         <div class="admin-profile hide">
-          <img src="./img/2021-03-19 오후 3_12 Microsoft Lens.jpg" alt="">
+          <img src="./adidas.png" alt="">
           <div class="admin-info">
-            <h3>Jin Ok</h3>
-            <h5>Admin</h5>
+            <h3>Jinok</h3>
+            <h5>Admin</h5>  
           </div>
         </div>
         <a href="#" class="log-out">
-          <i class='bx bx-log-out'></i>
-        </a>
+          <i class='bx bx-log-out' ></i>
+        </a>  
       </div>
       <div class="tooltip">
-        <span class="show">Jin Ok</span>
+        <span class="show">Jinok</span>
         <span>Logout</span>
       </div>
     </div>
-  </nav>
-
-
-  <main>
-    <h1>My Dashboard</h1>
-    <p class="text">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur animi voluptatibus cum maxime distinctio
-      iste quod deleniti eius, autem voluptates cumque suscipit iure quasi eligendi ullam. Sapiente eligendi porro
-      reprehenderit corrupti error facilis quo, fugiat fugit? Maiores aliquam ad, molestiae iste nihil, commodi
-      doloremque tempore excepturi aut id ducimus unde?
-    </p>
-    <p class="copyright">
-      &copy; 2021 - <span>MMC Co.,</span> All Rights Reserved.
-    </p>
-  </main>
+  </div>
 </body>
 </html>
