--- a/Web/CSS/Text Animation-01/index.html
+++ b/Web/CSS/Text Animation-01/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
-<html lang="ko">
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Text Animation</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="#" type="image/x-icon">
-  <script src="script.js" defer></script>
 </head>
 <body>
-  <button id="addbtn">Add</button>
-  <button id="deletebtn" >Delete</button>
-  <hr>
-  <div class="contain">
-  </div>
-  <hr>
+  <h1 data-text = "Creative...">Creative...</h1>
 </body>
 </html>
