--- a/Web/CSS/Image Masking/index.html
+++ b/Web/CSS/Image Masking/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-<html lang="ko">
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="#" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <script src="script.js" defer></script>
 </head>
 <body>
-  <button id="addbtn">Add</button>
-  <button id="deletebtn" >Delete</button>
-  <hr>
-  <div class="contain">
-  </div>
-  <hr>
+  <section>
+    
+  </section>
 </body>
 </html>
