--- a/Web/CSS/Text Outline/index.html
+++ b/Web/CSS/Text Outline/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,14 +7,8 @@
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="#" type="image/x-icon">
-  <script src="script.js" defer></script>
 </head>
 <body>
-  <button id="addbtn">Add</button>
-  <button id="deletebtn" >Delete</button>
-  <hr>
-  <div class="contain">
-  </div>
-  <hr>
+  <h1>Creative...</h1>
 </body>
 </html>
