--- a/Web/JavaScript/Drag N Drop-02/index.html
+++ b/Web/JavaScript/Drag N Drop-02/index.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Drop Sortable List Project</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <script src="script.js" defer></script>
 </head>
 <body>
-
+  <h1>10 Richest People</h1>
+  <p>Drag and drop the items into their corresponding spots</p>
+  <ul class="draggable-list" id="draggable-list"></ul>
+  <button class="check-btn" id="check">Check Order<i class="fas fa-paper-plane"></i></button>
 </body>
 </html>
