file add & revise

--- a/Web/JavaScript/BgColor Change-02/index.html
+++ b/Web/JavaScript/BgColor Change-02/index.html
@@ -9,6 +9,13 @@
   <link rel="shortcut icon" href="#" type="image/x-icon">
   <script src="script.js" defer></script>
   <style>
+    body{
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
     .box{
       margin-top: 20px;
       width: 400px;
