--- a/Web/JavaScript/BgColor Change-03/index.html
+++ b/Web/JavaScript/BgColor Change-03/index.html
@@ -12,7 +12,7 @@
 <body>
   <select id="bgColor"  onchange="changeColor()">
     <!-- onchange 메서드 사용 -->
-    <option value="white">Color</option>
+    <option value="white">white</option>
     <option value="blue">Blue</option>
     <option value="green">Green</option>
     <option value="red">Red</option>
